public/stylesheets/main.css
#everything .accordion-group {
  border: none;
}

.dataTables_wrapper table.table {
  margin-bottom: 0px;
}
.dataTables_filter label input[type=text]{
  margin-top: 1%;
}

.small{
  font-size: 0.5em;
}

/* Submissions status*/
.error,
.failure,
.fail {
  color: red !important;
}

.success,
.ok {
  color: green;
}

/* Basic commons */

/*.list-title {
  font-weight: bold;
}

#content-area h2 {
  margin-top: 1.6em;
}

section {
  margin-left: 1.5em;
  margin-bottom: 2em;
}
*/

.review-required,
.review-requested {
  font-weight: bold;
}

.footnote {
  font-size: 8pt;
}

.fine-print {
  font-size: 8pt;
  color: #444444;
}

.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
}

#error_explanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: -7px;
  margin-bottom: 0px;
  background-color: #c00;
  color: #fff;
}

#error_explanation ul li {
  font-size: 12px;
  list-style: square;
}

/*button * {
  float: left;
  white-space: nowrap;
}*/

.transfer-effect {
  border: 2px dotted gray;
}

.medium-drop-shadow {
  box-shadow: 2px 3px 4px 1px #696969;
}

.big-drop-shadow {
  box-shadow: 3px 4px 5px 2px #696969;
}

.dialog-buttons {
  /*float: right;*/
  position: absolute;
  bottom: 0;
  right: 1em;
}


/* Toplevel layout */

/* bootstrapping */
body #everything {
  /*font-size: 12px;*/
  padding-top: 80px;
  /*
  color: black;
  font-family: sans-serif;
  */
}

body.default {
  background-color: #DDDDDD;
}

#everything {
  background-color: white;
  margin-left: 4%;
  margin-right: 4%;
  padding-bottom: 8%;
}

#everything > div {
  padding-left: 2%;
  padding-right: 2%;
}

#page-presence {
  float: right;
}

/* Miscellaneous */
div.repo-list{
  padding-top: 30px;
}

div.refresh-course-button {
  margin-bottom: 20px;
}

div.link-back {
  margin-top: 30px;
}

div.alternative-format-links {
  float: right;
}

div.submission-summary {
  font-weight: bold;
}

span.source-url {
  font-family: monospace;
  font-size: 120%;
  padding-left: 8pt;
}

span.git-branch {
  font-family: monospace;
  padding-left: 10pt;
}

tr.hidden * {
  color: gray;
}

div.stack-trace {
  font-family: monospace;
}

.scrollable {
  overflow: auto;
}

div.feedback-question {
  font-weight: bold;
  margin-bottom: 6pt;
}

div.feedback-source {
  font-style: italic;
}

/* Lists and tables */

table {
  border-collapse: collapse;
  width: 100%;
}

table > * > tr > td {
  padding: 6px 14px 6px 14px;
  border: 1px solid gray;
}

table > * > tr > th {
  padding: 6px 4px 6px 4px;
  border: 0;
}

tr.table-totals > td {
  font-weight: bold;
}

/* Points tables */

table.points {
  width: auto;
}

table.points tr.admin * {
  color: gray;
}

table.points > * > tr > td {
  text-align: center;
}

/* Code reviews */

.code-review {
  border: 1px #CCCCCC solid;
  padding: 10px;
  margin-top: 1em;
  margin-bottom: 2em;
  transition: all 0.5s;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
}

.code-review.being-edited {
  box-shadow: 0 0 4px 2px #47A6FF;
}

.reviewer {
  font-weight: bold;
}

.points-by-review span.label {
  font-weight: bold;
}

.code-review .status-buttons {
  float: right;
}

#review-form {
  height: 95%;
}

#review-form > form {
  height: 100%;
}

#review-form textarea {
  width: 100%;
  height: 60%;
  margin: auto;
  resize: none; /* We do our own resizing */
}

#review-form .notification-options {
  margin-bottom: 1.5em;
  transition: all 0.5s;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
}

#review-form form.editing-existing-review .notification-options {
  opacity: 0;
  height: 0;
  overflow: hidden;
}

#review-form-reopen-handle {
  position: fixed;
  top: 100%;
  left: 0;
  margin-left: 10px;
  margin-top: -50px;
  z-index: 1000;
}

#review-form .buttons {
  margin-top: 0.6em;
}

#dismiss-review-form {
  float: right;
}

.code-review .buttons {
  float: right;
}

.red {
  background: #ff0000;
}

.green {
  background: #009900;
  text-align: center;
}

.exercise-status {
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 5px;
  padding-right: 5px;
  width: 100px;
}

.exercise-status > * {
  float: left;
  height: 12pt;
  text-align: center;
}

.exercise-status > :first-child {
  border-radius: 6px 0 0 6px;
}

.exercise-status > :last-child {
  border-radius: 0 6px 6px 0;
}

.exercise-status > :first-child:last-child {
  border-radius: 6px;
}

.exercise-status .green span {
  color: #ffffff;
  font-style: italic;
}

.reply-to-feedback {
  border-style:solid;
  border-spacing: 10px;
  border-width: 1px;
  border-radius: 4px 4px 4px 4px;
  margin: 12px 12px 12px 12px;
  padding: 10px 2px 2px 2px;
}

.reply-to-feedback span {
  padding-top: 4px;
  padding-left: 10px;
}

